changed url to https://github.com/AcademySoftwareFoundation/openexr
Signed-off-by: Cary Phillips <cary@ilm.com>

--- a/links.html
+++ b/links.html
@@ -99,9 +99,7 @@
           <td valign="top">
        <!-- begin content -->   
 <p>&nbsp;</p>
-<p>The OpenEXR software distribution is available through <a href="https://github.com/openexr">https://github.com/openexr</a>.</p>
-
-<p>Previous source code repository is still accessible via <a href="http://savannah.nongnu.org/projects/openexr/">http://savannah.nongnu.org/projects/openexr/</a></p>
+<p>The OpenEXR software distribution is available through <a href="https://github.com/AcademySoftwareFoundation/openexr">https://github.com/AcademySoftwareFoundation/openexr</a>.</p>
 
 <font face="Arial,Helvetica,sans-serif" size="1" color="#993333">&#169; <script>var curDate=new Date(); document.write(curDate.getFullYear())</script>Copyright OpenEXR a Series of LF Projects, LLC and/or its contributors. All documentation on this website made available under a Creative Commons Attribution 4.0 International License.</FONT><br>
           <p>&nbsp;</p>
