--- a/downloads.html
+++ b/downloads.html
@@ -104,32 +104,51 @@
 <p>&nbsp;</p>
 
 <p class="release">For information about contributing to OpenEXR, or to download the
-  source via GitHub, see <a href="https://github.com/openexr/openexr"
-  target="_blank">https://github.com/openexr/openexr</a>.</p>
+  source via GitHub, see <a href="https://github.com/AcademySoftwareFoundation/openexr"
+  target="_blank">https://github.com/AcademySoftwareFoundation/openexr</a>.</p>
 
-<br>
-
-<p class="release"><a href="downloads/OpenEXR Individual Contributor License Agreement.pdf">Individual Contributor Agreement</a><br>
-
-<p class="release"><a href="downloads/OpenEXR Corporate Contributor License Agreement.pdf">Corporate Contributor Agreement</a><br>
+<p class="release">As of release 2.4.0, IlmBase, PyIlmBase, OpenEXR, and
+  OpenEXR_Viewers are no longer directly downloadable as independent
+  tarballs. Download the entire tarball from the 
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases">releases</a>
+page and extract the desired directory from there.</p>
 
 <h5>Current Version:</h5>
+
 <blockquote>
 
-<p class="release">IlmBase 2.3.0 source code release<br/>
-<a href="https://github.com/openexr/openexr/releases/download/v2.3.0/ilmbase-2.3.0.tar.gz">ilmbase-2.3.0.tar.gz</a></p>
+<p class="release"><br/>
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.1">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.1</a></p>
 
-<p class="release">PyIlmBase 2.3.0 source code release<br/>
-<a href="https://github.com/openexr/openexr/releases/download/v2.3.0/pyilmbase-2.3.0.tar.gz">pyilmbase-2.3.0tar.gz</a></p>
-
-<p class="release">OpenEXR 2.3.0 source code release<br/>
-<a href="https://github.com/openexr/openexr/releases/download/v2.3.0/openexr-2.3.0.tar.gz">openexr-2.3.0.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 2.3.0 source code release<br/>
-<a href="https://github.com/openexr/openexr/releases/download/v2.3.0/openexr_viewers-2.3.0.tar.gz">openexr_viewers-2.3.0.tar.gz</a></p>
 </blockquote>
 
 <h5>Previous Versions:</h5>
+
+<blockquote>
+
+<p class="release"><br/>
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0</a></p>
+
+</blockquote>
+
+<p>&nbsp;</p>
+
+<blockquote>
+
+<p class="release">IlmBase 2.3.0 source code release<br/>
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/download/v2.3.0/ilmbase-2.3.0.tar.gz">ilmbase-2.3.0.tar.gz</a></p>
+
+<p class="release">PyIlmBase 2.3.0 source code release<br/>
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/download/v2.3.0/pyilmbase-2.3.0.tar.gz">pyilmbase-2.3.0tar.gz</a></p>
+
+<p class="release">OpenEXR 2.3.0 source code release<br/>
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/download/v2.3.0/openexr-2.3.0.tar.gz">openexr-2.3.0.tar.gz</a></p>
+
+<p class="release">OpenEXR_Viewers 2.3.0 source code release<br/>
+<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/download/v2.3.0/openexr_viewers-2.3.0.tar.gz">openexr_viewers-2.3.0.tar.gz</a></p>
+</blockquote>
+
+<p>&nbsp;</p>
 
 <blockquote>
 <p class="release">PyIlmBase 2.2.0 source code release<br/>
