--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ target="_blank">here</a>.
 
 <p><h3><a name="announ">Announcements</a></h3>
 
-<p><strong>Feb 11, 2020</strong> - OpenEXR version v2.4.1 is available for download at <a href="https://github.com/openexr/openexr/releases/tag/v2.4.1">https://github.com/openexr/openexr/releases/tag/v2.4.1</a></p>
+<p><strong>Feb 11, 2020</strong> - OpenEXR version v2.4.1 is available for download at <a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.1">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.1</a></p>
 
 <p>This is a patch release that addresses miscellaneous bugs.</p>
 
@@ -200,7 +200,7 @@ target="_blank">here</a>.
 
 <p>---</p>
 
-<p><strong>Sep 19, 2019</strong> - OpenEXR version v2.4.0 is available for download at <a href="https://github.com/openexr/openexr/releases/tag/v2.4.0">https://github.com/openexr/openexr/releases/tag/v2.4.0</a></p>
+<p><strong>Sep 19, 2019</strong> - OpenEXR version v2.4.0 is available for download at <a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0</a></p>
 
 <p>This release contains no major new functionality, although it does
 include many miscellaneous bug and security fixes. The major new
@@ -233,7 +233,7 @@ repo home page.</p>
 <li>CVE-2018-18443 Issue #350 heap-buffer-overflow</li>
 </ul>
 
-<p><strong>Sep 5, 2019</strong> - OpenEXR version v2.4.0-beta.1 is available for download at <a href="https://github.com/openexr/openexr/releases/tag/v2.4.0-beta.1">https://github.com/openexr/openexr/releases/tag/v2.4.0-beta.1</a></p>
+<p><strong>Sep 5, 2019</strong> - OpenEXR version v2.4.0-beta.1 is available for download at <a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0-beta.1">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0-beta.1</a></p>
 
 <p>This release contains no major new functionality, although it does
 include many miscellaneous bug and security fixes. The major new
@@ -298,16 +298,16 @@ repo home page.</p>
 </ul>
 
 <p>Full release notes are here:</p>
-<a href="https://github.com/openexr/openexr/blob/develop/CHANGES.md">https://github.com/openexr/openexr/blob/develop/CHANGES.md</a> 
+<a href="https://github.com/AcademySoftwareFoundation/openexr/blob/develop/CHANGES.md">https://github.com/AcademySoftwareFoundation/openexr/blob/develop/CHANGES.md</a> 
 
-<p>OpenEXR source can be obtained from the downloads section of <a href="http://www.openexr.com">www.openexr.com</a> or from the project page on github: <a href="https://github.com/openexr/openexr">https://github.com/openexr/openexr</a></p>
+<p>OpenEXR source can be obtained from the downloads section of <a href="http://www.openexr.com">www.openexr.com</a> or from the project page on github: <a href="https://github.com/AcademySoftwareFoundation/openexr">https://github.com/AcademySoftwareFoundation/openexr</a></p>
 
 <p><strong>November 30, 2017</strong> - OpenEXR v2.2.1 has been
   released and is available for download.  </p>
 
 <p>This maintenance release addresses the reported OpenEXR security vulnerabilities, specifically CVE-2017-9110, CVE-2017-9111, CVE-2017-9112, CVE-2017-9113, CVE-2017-9114, CVE-2017-9115, CVE-2017-9116. </p>
 
-<p>OpenEXR source can be obtained from the downloads section of <a href="http://www.openexr.com">www.openexr.com</a> or from the project page on github: <a href="https://github.com/openexr/openexr">https://github.com/openexr/openexr</a></p>
+<p>OpenEXR source can be obtained from the downloads section of <a href="http://www.openexr.com">www.openexr.com</a> or from the project page on github: <a href="https://github.com/AcademySoftwareFoundation/openexr">https://github.com/AcademySoftwareFoundation/openexr</a></p>
 
 <p>---</p>
 
@@ -326,7 +326,7 @@ repo home page.</p>
 
 <p>This release also includes improvements to cross-platform build support using CMake.</p>
 
-<p>OpenEXR source can be obtained from the downloads section of <a href="http://www.openexr.com">www.openexr.com</a> or from the project page on github: <a href="https://github.com/openexr/openexr">https://github.com/openexr/openexr</a></p>
+<p>OpenEXR source can be obtained from the downloads section of <a href="http://www.openexr.com">www.openexr.com</a> or from the project page on github: <a href="https://github.com/AcademySoftwareFoundation/openexr">https://github.com/AcademySoftwareFoundation/openexr</a></p>
 
 <p>---</p>
 
@@ -391,10 +391,10 @@ repo home page.</p>
 <p>* Multi-part image files. With OpenEXR v2, files can now contain a number of separate, but related, images in one file. Access to any part is independent of the others; in particular, no access of data need take place for unrequested parts.</p>
 <p>In addition, OpenEXR v2 also contains platform independent mechanisms for handling co-existing library version conflicts in the same process space. (Currently implemented in IlmImf)</p>
 <p>Finally, a reminder that this is a Beta release and potentially incompatible changes may be introduced in future releases prior to the v2.0.0 production version.</p>
-<p>OpenEXR v2Beta.1 can be found at: <a href="https://github.com/openexr/openexr/tree/v2_beta.1" target="_blank">https://github.com/openexr/openexr/tree/v2_beta.1</a></p>
+<p>OpenEXR v2Beta.1 can be found at: <a href="https://github.com/AcademySoftwareFoundation/openexr/tree/v2_beta.1" target="_blank">https://github.com/AcademySoftwareFoundation/openexr/tree/v2_beta.1</a></p>
 <p>---</p>
 
-<p><b>June 18, 2012</b> - We're pleased to announce that the OpenEXR source code is moving to <b>github.com</b>. You can browse, download and branch the code at <a href="http://www.github.com/openexr/openexr" target="_blank">www.github.com/openexr/openexr</a>.</p>
+<p><b>June 18, 2012</b> - We're pleased to announce that the OpenEXR source code is moving to <b>github.com</b>. You can browse, download and branch the code at <a href="http://www.github.com/AcademySoftwareFoundation/openexr" target="_blank">www.github.com/AcademySoftwareFoundation/openexr</a>.</p>
 
 <p>We're looking forward to taking advantage of the collaborative features presented by <b>git</b> and <b>github.com</b> and of course community contributions. Please see the developer Wiki pages for more information regarding participation.</p>
 
