--- a/mailinglist.html
+++ b/mailinglist.html
@@ -115,8 +115,8 @@
 <p>
   To receive annoucements of new releases of OpenEXR, subscribe to
   release notifications directly from the GitHub repo at
-  <a href="https://github.com/openexr/openexr"
-  target="_blank">https://github.com/openexr/openexr</a>.
+  <a href="https://github.com/AcademySoftwareFoundation/openexr"
+  target="_blank">https://github.com/AcademySoftwareFoundation/openexr</a>.
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
