--- a/downloads.html
+++ b/downloads.html
@@ -103,185 +103,10 @@
        <!-- begin content -->
 <p>&nbsp;</p>
 
-<p class="release">For information about OpenEXR, 
-  see <a href="https://github.com/AcademySoftwareFoundation/openexr"
+<p>Download OpenEXR from the GitHub repository:</p> 
+
+<p><a href="https://github.com/AcademySoftwareFoundation/openexr"
   target="_blank">https://github.com/AcademySoftwareFoundation/openexr</a>.</p>
-
-<p class="release">To download OpenEXR, see the
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases">GitHub
-  Releases</a> page.</p>
-
-<p class="release">Note that as of release 2.4.0, IlmBase, PyIlmBase, OpenEXR, and
-  OpenEXR_Viewers are no longer directly downloadable as independent
-  tarballs.</p> 
-
-<h5>Current Version:</h5>
-
-<blockquote>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.5.2">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.5.2</a></p>
-
-</blockquote>
-
-<h5>Previous Versions:</h5>
-
-<blockquote>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.5.1">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.5.1</a></p>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.2">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.2</a></p>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.1">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.1</a></p>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.4.0</a></p>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.3.0">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.3.0</a></p>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.2.2">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.2.2</a></p>
-
-<p class="release"><br/>
-<a href="https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.2.1">https://github.com/AcademySoftwareFoundation/openexr/releases/tag/v2.2.1</a></p>
-
-<p>&nbsp;</p>
-
-<p class="release">PyIlmBase 2.2.0 source code release<br/>
-<a href="http://download.savannah.gnu.org/releases/openexr/pyilmbase-2.2.0.tar.gz">pyilmbase-2.2.0tar.gz</a></p>
-
-<p class="release">OpenEXR 2.2.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-2.2.0.tar.gz">openexr-2.2.0.tar.gz</a></p>
-
-<p class="release">IlmBase 2.2.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/ilmbase-2.2.0.tar.gz">ilmbase-2.2.0.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 2.2.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr_viewers-2.2.0.tar.gz">openexr_viewers-2.2.0.tar.gz</a></p>
-
-<p>&nbsp;</p>
-
-<p class="release">PyIlmBase 2.1.0 source code release<br/>
-<a href="http://download.savannah.gnu.org/releases/openexr/pyilmbase-2.1.0.tar.gz">pyilmbase-2.1.0tar.gz</a></p>
-
-<p class="release">OpenEXR 2.1.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-2.1.0.tar.gz">openexr-2.1.0.tar.gz</a></p>
-
-<p class="release">IlmBase 2.1.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/ilmbase-2.1.0.tar.gz">ilmbase-2.1.0.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 2.1.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr_viewers-2.1.0.tar.gz">openexr_viewers-2.1.0.tar.gz</a></p>
-
-<p>&nbsp;</p>
-
-<p class="release">PyIlmBase 2.0.1 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/pyilmbase-2.0.1.tar.gz">pyilmbase-2.0.1tar.gz</a></p>
-
-<p class="release">OpenEXR 2.0.1 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-2.0.1.tar.gz">openexr-2.0.1.tar.gz</a></p>
-
-<p class="release">IlmBase 2.0.1 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/ilmbase-2.0.1.tar.gz">ilmbase-2.0.1.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 2.0.1 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr_viewers-2.0.1.tar.gz">openexr_viewers-2.0.1.tar.gz</a></p>
-
-<p>&nbsp;</p>
-
-<p class="release">PyIlmBase 2.0.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/pyilmbase-2.0.0.tar.gz">pyilmbase-2.0.0tar.gz</a></p>
-
-<p class="release">OpenEXR 2.0.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-2.0.0.tar.gz">openexr-2.0.0.tar.gz</a></p>
-
-<p class="release">IlmBase 2.0.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/ilmbase-2.0.0.tar.gz">ilmbase-2.0.0.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 2.0.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr_viewers-2.0.0.tar.gz">openexr_viewers-2.0.0.tar.gz</a></p>
-
-<p>&nbsp;</p>
-
-<p class="release">PyIlmBase 1.0.0 source code release<br/>
-<a href="https://github.com/downloads/openexr/openexr/pyilmbase-1.0.0-v1.7.tar.gz">pyilmbase-1.0.0tar.gz</a></p>
-
-<p class="release">OpenEXR 1.7.1 source code release  <br/>
-<a href="https://github.com/downloads/openexr/openexr/openexr-1.7.1.tar.gz">openexr-1.7.1.tar.gz</a></p>
-
-<p class="release">IlmBase 1.0.3 source code release<br/>
-<a href="https://github.com/downloads/openexr/openexr/ilmbase-1.0.3.tar.gz">ilmbase-1.0.3.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 1.0.2 source code release<br/>
-<a href="https://github.com/downloads/openexr/openexr/openexr_viewers-1.0.2.tar.gz">openexr_viewers-1.0.2.tar.gz</a></p>
-
-<p>&nbsp;</p>
-
-<p class="release">IlmBase 1.0.2 source code release<br>
-<a href="http://download.savannah.nongnu.org/releases/openexr/ilmbase-1.0.2.tar.gz">ilmbase-1.0.2.tar.gz</a></p>
-
-<p class="release">OpenEXR 1.7.0 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-1.7.0.tar.gz">openexr-1.7.0.tar.gz</a></p>
-
-<p class="release">OpenEXR_Viewers 1.0.2 source code release<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr_viewers-1.0.2.tar.gz">openexr_viewers-1.0.2.tar.gz</a></p>
-
-<p class="release">OpenEXR sample images<br/>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-images-1.7.0.tar.gz">openexr-images-1.7.0.tar.gz</a></p>
-
-<p>&nbsp;</p>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR 1.4.0a source code release: <br>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-1.4.0a.tar.gz">openexr-1.4.0a.tar.gz</a>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR 1.4.0 pre-compiled for Windows, Visual Studio .NET 2003: <br>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-1.4.0-vsnet2003.zip">openexr-1.4.0-vsnet2003.zip</a>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR 1.4.0 pre-compiled for Windows, Visual Studio .NET 2005: <br>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-1.4.0-vs2005.zip">openexr-1.4.0-vs2005.zip</a>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR sample images: <br>
-<a href="http://download.savannah.nongnu.org/releases/openexr/openexr-images-1.4.0.tar.gz">openexr-images-1.4.0.tar.gz</a>
-
-<p><b>Plugins</b>
-
-<blockquote>
-<font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR Photoshop plugin source code: <br>
-<a href="http://savannah.nongnu.org/download/openexr/OpenEXR_Photoshop-1.2.1.Source.tar.gz">OpenEXR_Photoshop-1.2.1.Source.tar.gz</a>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR Photoshop plugin for Win32: <br>
-<a href="http://savannah.nongnu.org/download/openexr/OpenEXR_Photoshop-1.2.1.Win.zip">OpenEXR_Photoshop-1.2.1.Win.zip</a>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR Photoshop plugin for OS X: <br>
-<a href="http://savannah.nongnu.org/download/openexr/OpenEXR_Photoshop-1.2.1.Mac.sit">OpenEXR_Photoshop-1.2.1.Mac.sit</a>
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">OpenEXR Shake 3.x plugin source code: <br>
-<a href="http://savannah.nongnu.org/download/openexr/OpenEXR_Shake-1.0.1.tar.gz">OpenEXR_Shake-1.0.1.tar.gz</a>
-</blockquote>
-
-
-<!--<h5>Older OpenEXR Releases:</h5>
-
-
-<p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">
-Photoshop plug-in binary:</p>
-
-<p>
-<a href="downloads/EXRFormatMac_1_1_0.sit">EXRFormatMac_1_1_0.sit</a><br>
-<a href="downloads/EXRFormatWin_1_1_0.zip">EXRFormatWin_1_1_0.zip</a></p></blockquote>
-
-<p><b>OpenEXR-1.0.7</b>
-
-
-<blockquote><font size="2" face="Verdana, Arial, Helvetica, sans-serif">
-<a href="downloads/OpenEXR-1.0.7.tar.gz">OpenEXR-1.0.7.tar.gz</a>
-contains the source code for the 1.0.7 release of OpenEXR. This is the last release of the scanline-only version of OpenEXR.</p>-->
-
-
 
           <p>&nbsp;</p>
 <font face="Arial,Helvetica,sans-serif" size="1" color="#993333">&#169; <script>var curDate=new Date(); document.write(curDate.getFullYear())</script><font face="Arial,Helvetica,sans-serif" size="1" color="#993333">&#169; <script>var curDate=new Date(); document.write(curDate.getFullYear())</script><font face="Arial,Helvetica,sans-serif" size="1" color="#993333">&#169; <script>var curDate=new Date(); document.write(curDate.getFullYear())</script>Copyright OpenEXR a Series of LF Projects, LLC and/or its contributors. All documentation on this website made available under a Creative Commons Attribution 4.0 International License.</FONT><br>
