sample3 image is Darker
Signed-off-by: Cary Phillips <cary@ilm.com>

--- a/samples.html
+++ b/samples.html
@@ -139,8 +139,8 @@
           <table width="100%" cellspacing="3" cellpadding="2" bgcolor="#666666">
             <tr valign="top" bgcolor="#333333"> 
               <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Original OpenEXR Image</b><br></font></td>
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Adjust 3 Stops Brighter</b><br></font></td>
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Adjust 5 Stops Brighter</b><br></font></td>
+              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Adjust 3 Stops Darker</b><br></font></td>
+              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Adjust 5 Stops Darker</b><br></font></td>
             </tr>
             <tr valign="top"> 
               <td align="center"><a href="javascript:OpenWin('samples/sample3_01.html')"><img src="images/sample3_01_sm.jpg" width="127" height="175" border="0" alt=""></a></td>
