--- a/index.html
+++ b/index.html
@@ -175,6 +175,63 @@ target="_blank">here</a>.
 
 <hr>
 
+<h3>Oct 4, 2021 - OpenEXR v3.1.2</h3>
+
+<p>Patch release with various bug fixes, build improvements, and
+documentation updates. In particular:</p>
+
+<ul>
+<li> Fix a test failure on arm7 </li>
+<li> Proper handling of pthread with glibc 2.34+ </li>
+<li> Miscellaneous fixes for handling of invalid input by the new
+  OpenEXRCore library </li>
+</ul>
+
+<p>
+With this version, the OpenEXR technical documentation formerly
+distributed exclusivly as pdf's is now published online at
+<a href="https://openexr.readthedocs.io">https://openexr.readthedocs.io</a>, with the document source now
+maintained as .rst files in the repo's docs subfolder. </p>
+
+<p>Specific OSS-fuzz issues:</p>
+
+<ul>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=39196)">OSS-fuzz 39196</a>
+  Stack-buffer-overflow in dispatch_print_error </li>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=39198)">OSS-fuzz 39198</a>
+  Direct-leak in exr_attr_chlist_add_with_length </li>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=39206)">OSS-fuzz 39206</a>
+  Direct-leak in extract_attr_string_vector </li>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=39212)">OSS-fuzz 39212</a>
+  Heap-use-after-free in dispatch_print_error </li>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=39205)">OSS-fuzz 39205</a>
+  Timeout in openexr_exrcheck_fuzzer </li>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=38912)">OSS-fuzz 38912</a>
+  Integer-overflow in Imf_3_1::bytesPerDeepLineTable </li>
+<li> <a href="https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=39084)">OSS-fuzz 39084</a>
+  Divide-by-zero in Imf_3_1::RGBtoXYZ </li>
+</ul>
+  
+<p>See the 
+<a href="https://github.com/AcademySoftwareFoundation/openexr/blob/v3.1.2/CHANGES.md">release
+  notes</a> for more details</p>
+
+<p>Download OpenEXR v3.1.2 from <a href="https://github.com/AcademySoftwareFoundation/OpenEXR/releases/tag/v3.1.2">https://github.com/AcademySoftwareFoundation/OpenEXR/releases/tag/v3.1.2.</a></p>
+
+<hr>
+
+<h3>Sep 2, 2021 - Imath v3.1.3</h3>
+
+Patch release with miscellaneous minor fixes.
+
+<p>See the 
+<a href="https://github.com/AcademySoftwareFoundation/Imath/blob/v3.1.3/CHANGES.md">release
+  notes</a> for more details</p>
+
+<p>Download Imath v3.1.3 from <a href="https://github.com/AcademySoftwareFoundation/Imath/releases/tag/v3.1.3">https://github.com/AcademySoftwareFoundation/Imath/releases/tag/v3.1.3.</a></p>
+
+<hr>
+
 <h3>Aug 2, 2021 - OpenEXR v3.1.1</h3>
 
 <p>Patch release that fixes build failures on various systems (ARM64
@@ -183,7 +240,7 @@ target="_blank">here</a>.
   few other minor issues.</p>
 
 <p>See the 
-<a href="https://github.com/AcademySoftwareFoundation/openexr/blob/master/CHANGES.md">release
+<a href="https://github.com/AcademySoftwareFoundation/openexr/blob/v3.1.1/CHANGES.md">release
   notes</a> for more details</p>
 
 <p>Download OpenEXR v3.1.1 from <a href="https://github.com/AcademySoftwareFoundation/OpenEXR/releases/tag/v3.1.1">https://github.com/AcademySoftwareFoundation/OpenEXR/releases/tag/v3.1.1.</a></p>
